--- a/src/main/webapp/dcxt/register.html
+++ b/src/main/webapp/dcxt/register.html
@@ -12,8 +12,8 @@
 			.d-box input[type="text"],.d-box input[type="password"]{border: 0;width: 100%;-webkit-tap-highlight-color: transparent;font-size: 14px;padding: 0;background: transparent;}
 			.d-box .d-input label{padding-right: 20px;}
 			.d-box .d-input input[type="radio"]{vertical-align: middle;margin-top:-3px}
-			.sub-box{text-align: center;padding: 30px 0;}
-			.sub-box input{width: 150px;height: 40px;display: inline-block;border: 0;background: #DDDDDD;color: #999999;}
+			.login-box{text-align: center;padding: 30px 0;}
+			.login-box input{width: 150px;height: 40px;display: inline-block;border: 0;background: #DDDDDD;color: #999999;}
 		</style>
 		<script src="js/jquery.min.js"></script>
 		<script>
