--- a/src/main/webapp/dcxt/demo.html
+++ b/src/main/webapp/dcxt/demo.html
@@ -52,7 +52,7 @@ html,body{width: 100%;height: 100%;overflow: hidden;position: relative;}
 			<div class="sys-name">在线点餐系统</div>
 			<div class="sys-cont">
 				<div class="logo"><img src="img/pic.png" width="55" height="55" /></div>
-				<div class="h-title">啊垃圾大家将就看时间空间了烧录卡烧录卡十厘米的接口对接空间打开</div>
+				<div class="h-title">欢迎使用在线点餐系统</div>
 			</div>
 		</div>
 		<div class="main">
